--- a/Aris/index.html
+++ b/Aris/index.html
@@ -2,27 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Telecharger le logiciel</title>
+    <title>Teléchargement Vélib'</title>
     <link rel="stylesheet" type="text/css" href="index.css">
-
-</div>
+    <link rel="icon" type="image/png" href="https://is1-ssl.mzstatic.com/image/thumb/Purple113/v4/21/93/6e/21936e8f-13b3-2589-2cb5-1f0466d6730e/source/256x256bb.jpg" />
 </head>
 <body>
-    <p>Bienvenue, pour télécharger la nouvelle appli Velib' vous étes au bon endroit</p>
+    <p id="titre">Bienvenue, pour télécharger la nouvelle appli Velib' vous étes au bon endroit</p>
 
-    <p>Toutes fois vous devez installer les modules suivants sur votre IDE python: Geopy </p>
+    <p id="blanc"><b>Toutefois vous devez installer les modules suivants sur votre IDE python: Geopy</b></p>
 
-    Pour installer un module sur EduPython veuillez suivre ce tutoriel:
-    <ul>
+    <p id="gauche">Pour installer un module sur EduPython veuillez suivre ce tutoriel:</p>
+    <ul id="gauche">
         <li>Aller sur l'onglet "outil" dans la barre des menu en haut</li>
         <li>Cliquer de nouveau sur "outil"</li>
         <li>Cliquer sur installation d'un nouveau module</li>
         <li>Appuyer sur 1</li>
         <li>Le nom du module est : geopy</li>
     </ul>
-    Nous sommes toujours disponibles en cas de problémes pour vous aider à faire fonctionner notre code
-    <p>Nos coordonnées sont les suivantes en cas de pépins</p>
-    <ul>
+    <p id="blanc"><b>Nous sommes toujours disponibles en cas de problémes pour vous aider à faire fonctionner notre code</b></p>
+
+    <p id="gauche">Nos coordonnées sont les suivantes en cas de pépins:</p>
+    <ul id="gauche">
         <li>Aris: 06 52 82 45 17</li>
         <li>Soren: 06 95 93 01 11</li>
     </ul>
